# doc2book

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  __main__.py  pyproject.toml
.github/workflows/: ci.yml
builder/: markdown_builder.py
cli/: main.py
config/: settings.py
core/: pipeline.py
crawler/: __init__.py  crawl4ai.py  firecrawl.py
examples/: README.md
exporter/: pdf_exporter.py
models/: page.py
tests/: test_crawler.py  test_models.py
